--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
+    "@tailwindcss/vite": "^4.0.6",
     "appwrite": "^17.0.0",
     "html-react-parser": "^5.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "tailwindcss": "^4.0.6",
     "tinymce": "^7.6.1"
   },
   "devDependencies": {
